# ner-cooccurrence-graphs

./: .gitignore  Makefile  README.md  analysis.py  extractor.py  generate_training_data.py  graph_builder.py  ner_pipeline.py  pyproject.toml
configs/: config.cfg
docs/: 01-initial-extraction.md  02-filtered-extraction.md  03-spacy-extraction.md  04-louvain-communities.md  05-pyvis-interactive.md  06-filtered-v2.md  07-custom-ner-training.md  scripts.md
figures/05-pyvis/: interactive_k_chars.html  interactive_paragraph.html  interactive_sentence.html
figures/06-filtered-v2/: interactive_k_chars.html  interactive_paragraph.html  interactive_sentence.html
figures/07-custom-ner-training/: interactive_k_chars.html  interactive_paragraph.html  interactive_sentence.html  metrics.json
